k8s/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memoryonline
  namespace: memoryonline
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service: { name: memoryonline-api, port: { number: 8080 } }
          - path: /gamehub
            pathType: Prefix
            backend:
              service: { name: memoryonline-signalr, port: { number: 8080 } }
